# temperature_sensor_reader

./: .gitmodules  README.md  __init__.py  build_and_install_locally.sh  pyproject.toml  setup.py
examples/: JDRK_data_analysis.py  JDRK_sensor.py
graphtec_reader/: __init__.py  __main__.py  helper_function.py
modbus_configuretools/: __init__.py  derived_modbus_wrapper.py  helper_function.py  modbus_wrapper.py  temperature_sensor.py
temperature_data_analysis/: __init__.py  data_wrapper.py  plot_wrapper.py
