[build-system]
requires = ["setuptools>=61.0", "numpy", "pyserial", "pyserial-asyncio", "pymodbus"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus_configuretools_xzf8971"
version = "1.2.1"
authors = [
  { name="Zifeng", email="zifeng.xu@foxmail.com" },
]
description = "A package to read/write registers on a temperature sensor with python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xzf89718/temperature_sensor_reader"
"Bug Tracker" = "https://github.com/xzf89718/temperature_sensor_reader/issues"
