[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "cython ~= 0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = "temperature_sensor_reader_xzf8971"
version = "1.1.0"
authors = [
  { name="Zifeng", email="zifeng.xu@foxmail.com" },
]
description = "A package to read/write registers on a temperature sensor with python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "pyserial", "pyserial-asyncio", "pymodbus", "pandas", "bs4", "custom-logger-xzf8971"]
[project.urls]
"Homepage" = "https://github.com/xzf89718/temperature_sensor_reader"
"Bug Tracker" = "https://github.com/xzf89718/temperature_sensor_reader/issues"
